tests/fixtures/errors/UNKNOWN_COMPARATOR__B.tsl
DROP stick 2
 ON Donation
 WITH amount EQUALS 10
